--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,94 @@ code {
   justify-content: center;
   text-align: center;
 }
+.carrousel {
+  justify-content: center;
+}
+.blocs {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+.desc-bloc {
+  display: flex;
+  width: 50%;
+  justify-content: center;
+}
+.equip-bloc {
+  display: flex;
+  width: 50%;
+  justify-content: center;
+}
+.rating-and-host {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.tag-index {
+  margin-left: 2rem;
+}
+.tag {
+  color: #FF6060;
+  font-size: 16px;
+  font-weight: 300;
+}
+.infos-bloc {
+  display: flex;
+  justify-content: space-between;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 209px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (max-width: 900px) {
+  .about-banner img {
+    width: 800px;
+    height: auto;
+  }
+  main {
+    max-height: 100vh;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .about-banner img {
+    width: 400px;
+    height: 120px;
+  }
+  .infos-bloc {
+    display: flex;
+    flex-direction: row;
+  }
+  .blocs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .desc-bloc {
+    width: 100%;
+  }
+  .equip-bloc {
+    width: 100%;
+  }
+  .rating-and-host {
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    margin-top: 20px;
+  }
+  .tag-index {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
+  }
+  .tag {
+    margin: 0;
+    margin-bottom: 5px;
+  }
+}
