--- a/src/components/HomeBanner/style.css
+++ b/src/components/HomeBanner/style.css
@@ -8,6 +8,7 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
+    margin-bottom: 4rem;
 }
 .homeBanner-img {
     object-fit: cover;
